- Gotova fizika     - Physics Manager     - Shape Component, Circle Component - Ubacen World i Level - Ubacen Renderer i Sprite Component - Ubaceni Actori - Dodat basic shader - Malo peglanje Enegine Core-a - Dodat Resource manager - Sredjen input - Sitnije dorade

--- a/DSZ_DX_Engine/DSZ_DX_Engine.vcxproj
+++ b/DSZ_DX_Engine/DSZ_DX_Engine.vcxproj
@@ -146,26 +146,53 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Actor.cpp" />
+    <ClCompile Include="AEnemy.cpp" />
+    <ClCompile Include="ASpaceship.cpp" />
     <ClCompile Include="BasicGeometry.cpp" />
+    <ClCompile Include="BasicShader.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="D3D11API.cpp" />
+    <ClCompile Include="DSZ_Math.cpp" />
     <ClCompile Include="EngineCore.cpp" />
+    <ClCompile Include="GameTime.cpp" />
     <ClCompile Include="Globals.cpp" />
     <ClCompile Include="Grid.cpp" />
     <ClCompile Include="HLSL_Shader.cpp" />
     <ClCompile Include="Input.cpp" />
+    <ClCompile Include="Level.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="PhysicsManager.cpp" />
     <ClCompile Include="PNG_Texture.cpp" />
+    <ClCompile Include="Renderer.cpp" />
+    <ClCompile Include="ResourceManager.cpp" />
+    <ClCompile Include="ShapeComponent.cpp" />
     <ClCompile Include="SP.cpp" />
     <ClCompile Include="SpaceShooterGame.cpp" />
     <ClCompile Include="Sprite.cpp" />
+    <ClCompile Include="SpriteComponent.cpp" />
     <ClCompile Include="SpriteShader.cpp" />
+    <ClCompile Include="World.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Actor.h" />
+    <ClInclude Include="AEnemy.h" />
+    <ClInclude Include="ASpaceship.h" />
+    <ClInclude Include="BasicPhysics.h" />
+    <ClInclude Include="BasicShader.h" />
+    <ClInclude Include="CircleComponent.h" />
+    <ClInclude Include="Component.h" />
+    <ClInclude Include="DSZ_Math.h" />
+    <ClInclude Include="GameTime.h" />
+    <ClInclude Include="Level.h" />
+    <ClInclude Include="PhysicsManager.h" />
     <ClInclude Include="PNG_Texture.h" />
+    <ClInclude Include="Renderer.h" />
+    <ClInclude Include="ResourceManager.h" />
+    <ClInclude Include="SceneComponent.h" />
+    <ClInclude Include="ShapeComponent.h" />
     <ClInclude Include="SP.h" />
     <ClInclude Include="Sprite.h" />
+    <ClInclude Include="SpriteComponent.h" />
     <ClInclude Include="SpriteShader.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="D3D11API.h" />
@@ -180,8 +207,21 @@
     <ClInclude Include="BasicGeomentry.h" />
     <ClInclude Include="SpaceShooterGame.h" />
     <ClInclude Include="Texture.h" />
+    <ClInclude Include="World.h" />
   </ItemGroup>
   <ItemGroup>
+    <FxCompile Include="BasicPS.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Pixel</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Pixel</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Pixel</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Pixel</ShaderType>
+    </FxCompile>
+    <FxCompile Include="BasicVS.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Vertex</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Vertex</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Vertex</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Vertex</ShaderType>
+    </FxCompile>
     <FxCompile Include="ps.hlsl">
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Pixel</ShaderType>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Pixel</ShaderType>
